// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gridGap": 10,
    }
  }
>
  <div>
    <div
      data-css-f3a91f=""
    >
      default
       
      gray
    </div>
  </div>
  <div>
    <div
      data-css-28grcc=""
    >
      default
       
      green
    </div>
  </div>
  <div>
    <div
      data-css-7q4v5r=""
    >
      default
       
      yellow
    </div>
  </div>
  <div>
    <div
      data-css-1nxzn6k=""
    >
      default
       
      red
    </div>
  </div>
  <div>
    <div
      data-css-1y4xyqd=""
    >
      default
       
      blue
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance subtle 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gridGap": 10,
    }
  }
>
  <div>
    <div
      data-css-ikerdr=""
    >
      subtle
       
      gray
    </div>
  </div>
  <div>
    <div
      data-css-hmqqyn=""
    >
      subtle
       
      green
    </div>
  </div>
  <div>
    <div
      data-css-inha5s=""
    >
      subtle
       
      yellow
    </div>
  </div>
  <div>
    <div
      data-css-3lt21a=""
    >
      subtle
       
      red
    </div>
  </div>
  <div>
    <div
      data-css-aiwq2=""
    >
      subtle
       
      blue
    </div>
  </div>
</div>
`;
